--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"framer-motion": "11.13.1",
 		"intl-messageformat": "^10.5.0",
 		"mongodb": "^6.12.0",
+		"mongoose": "^8.9.5",
 		"next": "15.1.4",
 		"next-themes": "^0.4.4",
 		"react": "18.3.1",
